examples/test/testpolicy7043.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7043
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key5: value23
      key3: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value3
          key48: value46
          key49: value2
      podSelector:
        matchLabels:
          key13: value8
          key45: value7
          key3: value47
